внесение мелких правок

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&subset=cyrillic" rel="stylesheet">
+    <link href="normalize/style.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <title>Каталог</title>
   </head>
