--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&subset=cyrillic" rel="stylesheet">
+    <link href="normalize/style.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <title>Нёрдс</title>
   </head>
@@ -117,19 +118,19 @@
         </div>
       </section>
       <div class="gallery ">          
-            <a href="#"><img src="img/index/partner-1.png" width="198" height="37" alt=""></a>         
-            <a href="#"><img src="img/index/partner-2.png" width="199" height="68" alt=""></a>          
-            <a href="#"><img src="img/index/partner-3.png" width="209" height="86" alt=""></a>                  
+            <a href="#"><img class="gallery-item-1" src="img/index/partner-1.png" width="198" height="37" alt=""></a>         
+            <a href="#"><img class="gallery-item-2" src="img/index/partner-2.png" width="199" height="68" alt=""></a>          
+            <a href="#"><img class="gallery-item-3" src="img/index/partner-3.png" width="209" height="86" alt=""></a>               
       </div>     
     </main>
     <footer class="main-footer clearfix">
      <img class="main-footer-map" src="img/index/map-1.jpg" width="100%"  height="416" alt="">
-      <!--<div class="contacts-adress">                
+      <div class="contacts-adress">                
           <h2>NERDS Design Studio</h2>
           191186, Санкт-петербург<br>
           ул.Б.Коннюшенная, д.19/8
           тел.+7(812)275-75-75
-        </div>!-->
+        </div>
       <div class="container">     
         <div class="footer-content-left">
           <div class="footer-content-social">
