--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&subset=cyrillic" rel="stylesheet">
-    <link href="normalize/style.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <title>Каталог</title>
   </head>
@@ -11,12 +11,12 @@
     <header class="main-header-catalog">
       <div class="container clearfix">
         <div class="index-logo">
-          <a href="#">
+          <a >
           <img class="index-logo-img" src="img/index/logo.png" width="139" height="56" alt="Логотип"></a>         
         </div>
         <nav class="main-navigation">
           <ul>
-            <li><a href="#">Студия</a></li>
+            <li><a>Студия</a></li>
             <li><a href="#">Клиенты</a></li>
             <li><a href="#">Магазин</a></li>
             <li><a href="#">Контакты</a></li>
