--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&subset=cyrillic" rel="stylesheet">
-    <link href="normalize/style.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <title>Нёрдс</title>
   </head>
@@ -11,12 +11,12 @@
     <header class="main-header">
       <div class="container clearfix">
         <div class="index-logo">
-          <a href="#">
+          <a>
           <img class="index-logo-img" src="img/index/logo.png" width="139" height="56" alt="Логотип"></a>         
         </div>
         <nav class="main-navigation">
           <ul>
-            <li><a href="#">Студия</a></li>
+            <li><a>Студия</a></li>
             <li><a href="#">Клиенты</a></li>
             <li><a href="#">Магазин</a></li>
             <li><a href="#">Контакты</a></li>
@@ -32,7 +32,7 @@
         <div class="slider-content clearfix">
           <div class="slider-content-left">
             <div class="slider-slogan">
-            Долго, дорого,<br>скрупулезно
+            Долго,дорого,<br>скрупулезно
             </div>
             <p>Математически выверенный дизайн<br>
               для вашего сайта или мобильного приложения.
@@ -52,8 +52,8 @@
             <img src="img/index/Layer-1.jpg" width="240" height="124" alt="">
           </div>
           <h2 class="features-name">Веб-сайты</h2>
-          <p class="features-desc">Мир никогда не будет прежним<br>
-            после того как вы увидите наш сайт!
+          <p class="features-desc">Мир никогда не будет прежним
+            после того как увидит ваш сайт!
           </p>
           <a class="features-anchor anchor-1" href="#">Заказать</a>
         </div>
@@ -117,10 +117,12 @@
         </div>               
         </div>
       </section>
-      <div class="gallery ">          
-            <a href="#"><img class="gallery-item-1" src="img/index/partner-1.png" width="198" height="37" alt=""></a>         
-            <a href="#"><img class="gallery-item-2" src="img/index/partner-2.png" width="199" height="68" alt=""></a>          
-            <a href="#"><img class="gallery-item-3" src="img/index/partner-3.png" width="209" height="86" alt=""></a>               
+      <div class="gallery ">
+      <ul>          
+            <li><a href="#"><img class="gallery-item-1" src="img/index/partner-1.png" width="198" height="37" alt=""></a></li>        
+            <li><a href="#"><img class="gallery-item-2" src="img/index/partner-2.png" width="199" height="68" alt=""></a></li>         
+            <li><a href="#"><img class="gallery-item-3" src="img/index/partner-3.png" width="209" height="86" alt=""></a></li>
+            </ul>              
       </div>     
     </main>
     <footer class="main-footer clearfix">
@@ -128,7 +130,7 @@
       <div class="contacts-adress">                
           <h2>NERDS Design Studio</h2>
           191186, Санкт-петербург<br>
-          ул.Б.Коннюшенная, д.19/8
+          ул.Б.Коннюшенная, д.19/8<br>
           тел.+7(812)275-75-75
         </div>
       <div class="container">     
