--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="features-item">
           <div class="features-image">
-            <img src="img/index/Layer-2.jpg" width="240" height="124" alt="">
+            <img src="img/index/Layer-3.jpg" width="240" height="124" alt="">
           </div>
           <h2 class="features-name">Приложения</h2>
           <p class="features-desc">Покорите топ-10 приложений<br>
@@ -69,7 +69,7 @@
         </div>
         <div class="features-item">
           <div class="features-image">
-            <img src="img/index/Layer-3.jpg" width="240" height="124" alt="">
+            <img src="img/index/Layer-2.jpg" width="240" height="124" alt="">
           </div>
           <h2 class="features-name">Презентации</h2>
           <p class="features-desc">Вы даже не подозреваете<br>
@@ -136,9 +136,9 @@
       <div class="container">     
         <div class="footer-content-left">
           <div class="footer-content-social">
-            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+            <a class="social-btn social-btn-vk" href="#">VK</a>
+            <a class="social-btn social-btn-fb" href="#">FB</a>
+            <a class="social-btn social-btn-inst" href="#">IN</a>
           </div>
         </div>
         <div class="footer-content-right">
