мелкие правки.удалил фон и outline

--- a/index.html
+++ b/index.html
@@ -128,10 +128,14 @@
     <footer class="main-footer clearfix">
      <img class="main-footer-map" src="img/index/map-1.jpg" width="100%"  height="416" alt="">
       <div class="contacts-adress">                
-          <h2>NERDS Design Studio</h2>
-          191186, Санкт-петербург<br>
+          <h2 class="contacts-adress-title">NERDS Design Studio</h2>
+         <div class="contacts-adress-item"> 191186, Санкт-Петербург<br>
           ул.Б.Коннюшенная, д.19/8<br>
-          тел.+7(812)275-75-75
+          </div>
+          <div class="contacts-adress-item">
+          тел.+7(812)275-75-75<br>
+          </div>
+          <a href="#" class="contacts-adress-btn">Напишите нам</a>
         </div>
       <div class="container">     
         <div class="footer-content-left">
@@ -143,7 +147,7 @@
         </div>
         <div class="footer-content-right">
           <div class="footer-content-aside">
-            <span class="footer-slogan">Давайте дружить,это выгодно</span>
+            <div class="footer-slogan">Давайте дружить,это выгодно</div>
             <p>Скидка 10% для друзей из социальных сетей</p>
           </div>
         </div>
