--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <nav class="main-navigation">
           <ul>
-            <li><a>Студия</a></li>
+            <li><a class="active">Студия</a></li>
             <li><a href="#">Клиенты</a></li>
             <li><a href="#">Магазин</a></li>
             <li><a href="#">Контакты</a></li>
@@ -32,7 +32,7 @@
         <div class="slider-content clearfix">
           <div class="slider-content-left">
             <div class="slider-slogan">
-            Долго,дорого,<br>скрупулезно
+              Долго,дорого,<br>скрупулезно
             </div>
             <p>Математически выверенный дизайн<br>
               для вашего сайта или мобильного приложения.
@@ -42,14 +42,14 @@
           <div class="slider-content-right">
             <!--<div class="slider-logo">
               <img class="slider-logo-img" src="img/index/slider-1.png" width="338" height="231" alt="">
-            </div>!-->
+              </div>!-->
           </div>
         </div>
       </div>
       <section class="features clearfix">
         <div class="features-item">
           <div class="features-image">
-            <img src="img/index/Layer-1.jpg" width="240" height="124" alt="">
+            <img src="img/index/Layer-1.jpg" width="240" height="124" alt="Лого раздела приемущества">
           </div>
           <h2 class="features-name">Веб-сайты</h2>
           <p class="features-desc">Мир никогда не будет прежним
@@ -59,7 +59,7 @@
         </div>
         <div class="features-item">
           <div class="features-image">
-            <img src="img/index/Layer-3.jpg" width="240" height="124" alt="">
+            <img src="img/index/Layer-3.jpg" width="240" height="124" alt="Лого раздела приемущества">
           </div>
           <h2 class="features-name">Приложения</h2>
           <p class="features-desc">Покорите топ-10 приложений<br>
@@ -69,7 +69,7 @@
         </div>
         <div class="features-item">
           <div class="features-image">
-            <img src="img/index/Layer-2.jpg" width="240" height="124" alt="">
+            <img src="img/index/Layer-2.jpg" width="240" height="124" alt="Лого раздела приемущества">
           </div>
           <h2 class="features-name">Презентации</h2>
           <p class="features-desc">Вы даже не подозреваете<br>
@@ -81,63 +81,62 @@
       <section class="about-company clearfix">
         <div class="about-company-content">
           <div class="about-company-content-left">
-          <div class="about-container-left">
-            <div class="about-company-slogan">Мы-мальнькая,но гордая<br>
-            дизайн-студия из Краснодара.
-            </div>
-            <p class="about-company-desc">Исповедуем принципы минимализма и чистоты.Ставим математический<br>
-              расчет выше креатива.Работаем не покладая рук,как роботы.
-            </p>
+            <div class="about-container-left">
+              <div class="about-company-slogan">Мы-мальнькая,но гордая<br>
+                дизайн-студия из Краснодара.
+              </div>
+              <p class="about-company-desc">Исповедуем принципы минимализма и чистоты.Ставим математический<br>
+                расчет выше креатива.Работаем не покладая рук,как роботы.
+              </p>
             </div>
             <div class="aside-content-left">
-            <h2 class="aside-content-title">Выполняем заказы на разработку:</h2>
-            <ul class="aside-menu">
-              <li class="aside-item">Веб сайтов любой сложности</li>
-              <li class="aside-item">Мобильных приложений для IOS и Android</li>
-              <li class="aside-item">Слайдшоу и видео для корпоративных презинтаций</li>
-            </ul>
-          </div>
+              <h2 class="aside-content-title">Выполняем заказы на разработку:</h2>
+              <ul class="aside-menu">
+                <li class="aside-item">Веб сайтов любой сложности</li>
+                <li class="aside-item">Мобильных приложений для IOS и Android</li>
+                <li class="aside-item">Слайдшоу и видео для корпоративных презинтаций</li>
+              </ul>
+            </div>
           </div>
           <div class="about-company-content-right">
-          <div class="about-container-right">
-            <div class="about-company-logo">
-              <img src="img/index/logo-1.png" width="187" height="75" alt="">
+            <div class="about-container-right">
+              <div class="about-company-logo">
+                <img src="img/index/logo-1.png" width="187" height="75" alt="Лого Нёрдс">
+              </div>
+              <div class="about-company-since">SINCE 2004</div>
             </div>
-            <div class="about-company-since">SINCE 2004</div>                    
+            <div class="aside-content-right">
+              <h2 class="aside-content-title">Как мы работаем:</h2>
+              <ul class="aside-menu">
+                <li class="aside-item">С самоотдачей 146%</li>
+                <li class="aside-item">Соблюдая сроки на 100%</li>
+                <li class="aside-item">По предоплате 50%</li>
+              </ul>
             </div>
-              <div class="aside-content-right">
-            <h2 class="aside-content-title">Как мы работаем:</h2>
-            <ul class="aside-menu">
-              <li class="aside-item">С самоотдачей 146%</li>
-              <li class="aside-item">Соблюдая сроки на 100%</li>
-              <li class="aside-item">По предоплате 50%</li>
-            </ul>
           </div>
-          </div>
-        </div>               
-        </div>
+        </div>        
       </section>
       <div class="gallery ">
-      <ul>          
-            <li><a href="#"><img class="gallery-item-1" src="img/index/partner-1.png" width="198" height="37" alt=""></a></li>        
-            <li><a href="#"><img class="gallery-item-2" src="img/index/partner-2.png" width="199" height="68" alt=""></a></li>         
-            <li><a href="#"><img class="gallery-item-3" src="img/index/partner-3.png" width="209" height="86" alt=""></a></li>
-            </ul>              
-      </div>     
+        <ul>
+          <li><a href="#"><img class="gallery-item-1" src="img/index/partner-1.png" width="198" height="37" alt="Лого Партнерская сеть"></a></li>
+          <li><a href="#"><img class="gallery-item-2" src="img/index/partner-2.png" width="199" height="68" alt="Лого Партнерская сеть"></a></li>
+          <li><a href="#"><img class="gallery-item-3" src="img/index/partner-3.png" width="209" height="86" alt="Лого Партнерская сеть"></a></li>
+        </ul>
+      </div>
     </main>
     <footer class="main-footer clearfix">
-     <img class="main-footer-map" src="img/index/map-1.jpg" width="100%"  height="416" alt="">
-      <div class="contacts-adress">                
-          <h2 class="contacts-adress-title">NERDS Design Studio</h2>
-         <div class="contacts-adress-item"> 191186, Санкт-Петербург<br>
+      <img class="main-footer-map" src="img/index/map-1.jpg" width="100%"  height="416" alt="Карта">
+      <div class="contacts-adress">
+        <h2 class="contacts-adress-title">NERDS Design Studio</h2>
+        <div class="contacts-adress-item"> 191186, Санкт-Петербург<br>
           ул.Б.Коннюшенная, д.19/8<br>
-          </div>
-          <div class="contacts-adress-item">
-          тел.+7(812)275-75-75<br>
-          </div>
-          <a href="#" class="contacts-adress-btn">Напишите нам</a>
         </div>
-      <div class="container">     
+        <div class="contacts-adress-item">
+          тел.+7(812)275-75-75<br>
+        </div>
+        <a href="#" class="contacts-adress-btn">Напишите нам</a>
+      </div>
+      <div class="container">
         <div class="footer-content-left">
           <div class="footer-content-social">
             <a class="social-btn social-btn-vk" href="#">VK</a>
