--- a/catalog.html
+++ b/catalog.html
@@ -32,13 +32,13 @@
       <div class="catalog">
         <div class="catalog-filter">         
           <ul>
-            <li><b>Сортировать:</b></li>
+            <li>Сортировать:</li>
             <li><a href="#">По цене</a></li>
             <li><a href="#">По типу</a></li>
-            <li><a href="#">По функционалу</a></li>
+            <li><a href="#">По функционалу</a></li>          
+          <li><a href="#" class="filter"><span class="icon-up-dir"></span></a></li>       
+          <li><a href="#" class="filter"><span class="icon-down-dir"></span></a></li>
           </ul>
-          <a href="#" class="filter filter-up"></a>        
-          <a href="#" class="filter filter-down"></a>
         </div>
         <article class="catalog-item">
           <div class="catalog-content">
@@ -128,14 +128,17 @@
     </main>
     <footer class="main-footer">
      <img class="main-footer-map" src="img/index/map-1.jpg" width="100%"  height="416" alt="">
-      <div class="container">
-       <!--<div class="contacts-adress">Удалил блок адрес. Не знаю как его разместить под картой
-      чтобы он еще центровался.          
-          <h2>NERDS Design Studio</h2>
-          191186, Санкт-петербург<br>
-          ул.Б.Коннюшенная, д.19/8
-          тел.+7(812)275-75-75
-        </div>!-->
+     <div class="contacts-adress">
+        <h2 class="contacts-adress-title">NERDS Design Studio</h2>
+        <div class="contacts-adress-item"> 191186, Санкт-Петербург<br>
+          ул.Б.Коннюшенная, д.19/8<br>
+        </div>
+        <div class="contacts-adress-item">
+          тел.+7(812)275-75-75<br>
+        </div>
+        <a href="#" class="contacts-adress-btn">Напишите нам</a>
+      </div>
+      <div class="container">       
         <div class="footer-content-left">
           <div class="footer-content-social">
             <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
@@ -145,7 +148,7 @@
         </div>
         <div class="footer-content-right">
           <div class="footer-content-aside">
-            <span>Давайте дружить,это выгодно</span>
+           <div class="footer-slogan">Давайте дружить,это выгодно</div>
             <p>Скидка 10% для друзей из социальных сетей</p>
           </div>
         </div>
