--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
           </ul>
         </nav>
         <div class="user-block">
-          <a class="basket" href="#">Корзина</a>
+          <a class="basket" href="#"><!--<span class="icon-basket"></span>!-->Корзина</a>
         </div>      
         <h1 class="main-welcome">Добро пожаловать в магазин готовых макетов</h1>
       </div>
@@ -36,8 +36,8 @@
             <li><a href="#">По цене</a></li>
             <li><a href="#">По типу</a></li>
             <li><a href="#">По функционалу</a></li>          
-          <li><a href="#" class="filter"><span class="icon-up-dir"></span></a></li>       
-          <li><a href="#" class="filter"><span class="icon-down-dir"></span></a></li>
+          <!--<li><a href="#" class="filter"><span class="icon-up-dir"></span></a></li>       
+          <li><a href="#" class="filter"><span class="icon-down-dir"></span></a></li>!-->временно закоментировал
           </ul>
         </div>
         <article class="catalog-item">
