внесение правок главная страница

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         </div>
       </div>
     </header>
-    <main class="container">
-      <div class="slider">
-        <div class="slider-content clearfix">
+    <main >
+      <section class="slider">
+        <div class="slider-content clearfix container">
           <div class="slider-content-left">
             <div class="slider-slogan">
-              Долго,дорого,<br>скрупулезно
+              Долго, дорого,<br>скрупулезно
             </div>
             <p>Математически выверенный дизайн<br>
               для вашего сайта или мобильного приложения.
@@ -45,8 +45,8 @@
               </div>!-->
           </div>
         </div>
-      </div>
-      <section class="features clearfix">
+      </section>
+      <section class="features clearfix container">
         <div class="features-item">
           <div class="features-image">
             <img src="img/index/Layer-1.jpg" width="240" height="124" alt="Лого раздела приемущества">
@@ -79,7 +79,7 @@
         </div>
       </section>
       <section class="about-company clearfix">
-        <div class="about-company-content">
+        <div class="about-company-content container">
           <div class="about-company-content-left">
             <div class="about-container-left">
               <div class="about-company-slogan">Мы-мальнькая,но гордая<br>
@@ -106,7 +106,7 @@
               <div class="about-company-since">SINCE 2004</div>
             </div>
             <div class="aside-content-right">
-              <h2 class="aside-content-title">Как мы работаем:</h2>
+              <h2 class="aside-content-title aside-right">Как мы работаем:</h2>
               <ul class="aside-menu">
                 <li class="aside-item">С самоотдачей 146%</li>
                 <li class="aside-item">Соблюдая сроки на 100%</li>
@@ -116,23 +116,23 @@
           </div>
         </div>        
       </section>
-      <div class="gallery ">
+      <section class="gallery container ">
         <ul>
           <li><a href="#"><img class="gallery-item-1" src="img/index/partner-1.png" width="198" height="37" alt="Лого Партнерская сеть"></a></li>
           <li><a href="#"><img class="gallery-item-2" src="img/index/partner-2.png" width="199" height="68" alt="Лого Партнерская сеть"></a></li>
           <li><a href="#"><img class="gallery-item-3" src="img/index/partner-3.png" width="209" height="86" alt="Лого Партнерская сеть"></a></li>
         </ul>
-      </div>
+      </section>
     </main>
     <footer class="main-footer clearfix">
       <img class="main-footer-map" src="img/index/map-1.jpg" width="100%"  height="416" alt="Карта">
       <div class="contacts-adress">
         <h2 class="contacts-adress-title">NERDS Design Studio</h2>
-        <div class="contacts-adress-item"> 191186, Санкт-Петербург<br>
-          ул.Б.Коннюшенная, д.19/8<br>
+        <div class="contacts-adress-item"> 191186, Санкт-Петербург
+          ул.Б.Коннюшенная, д.19/8
         </div>
         <div class="contacts-adress-item">
-          тел.+7(812)275-75-75<br>
+          тел.+7(812)275-75-75
         </div>
         <a href="#" class="contacts-adress-btn">Напишите нам</a>
       </div>
@@ -146,7 +146,7 @@
         </div>
         <div class="footer-content-right">
           <div class="footer-content-aside">
-            <div class="footer-slogan">Давайте дружить,это выгодно</div>
+            <div class="footer-slogan">Давайте дружить, это выгодно</div>
             <p>Скидка 10% для друзей из социальных сетей</p>
           </div>
         </div>
