--- a/catalog.html
+++ b/catalog.html
@@ -16,16 +16,16 @@
         </div>
         <nav class="main-navigation">
           <ul>
-            <li><a>Студия</a></li>
+            <li><a href="#">Студия</a></li>
             <li><a href="#">Клиенты</a></li>
-            <li><a href="#">Магазин</a></li>
+            <li><a class="active">Магазин</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
         <div class="user-block">
-          <a class="basket" href="#"><!--<span class="icon-basket"></span>!-->Корзина</a>
+          <a class="basket icon-basket" href="#">Корзина</a>
         </div>      
-        <h1 class="main-welcome">Добро пожаловать в магазин готовых макетов</h1>
+        <h1 class="main-welcome">Добро пожаловать в магазин<br> готовых макетов</h1>
       </div>
     </header>
     <main class="container clearfix">
@@ -35,10 +35,12 @@
             <li>Сортировать:</li>
             <li><a href="#">По цене</a></li>
             <li><a href="#">По типу</a></li>
-            <li><a href="#">По функционалу</a></li>          
-          <!--<li><a href="#" class="filter"><span class="icon-up-dir"></span></a></li>       
-          <li><a href="#" class="filter"><span class="icon-down-dir"></span></a></li>!-->временно закоментировал
-          </ul>
+            <li><a href="#">По функционалу</a></li>
+            </ul>
+            <!--<div class="catalog-filter-triangles">            
+            <a href="#" id="triangle-up"></a>
+            <a href="#" id="triangle-down"></a>            
+            </div>не стилизуются стрелки !-->
         </div>
         <article class="catalog-item">
           <div class="catalog-content">
@@ -130,11 +132,11 @@
      <img class="main-footer-map" src="img/index/map-1.jpg" width="100%"  height="416" alt="">
      <div class="contacts-adress">
         <h2 class="contacts-adress-title">NERDS Design Studio</h2>
-        <div class="contacts-adress-item"> 191186, Санкт-Петербург<br>
-          ул.Б.Коннюшенная, д.19/8<br>
+        <div class="contacts-adress-item"> 191186, Санкт-Петербург
+          ул.Б.Коннюшенная, д.19/8
         </div>
         <div class="contacts-adress-item">
-          тел.+7(812)275-75-75<br>
+          тел.+7(812)275-75-75
         </div>
         <a href="#" class="contacts-adress-btn">Напишите нам</a>
       </div>
@@ -148,7 +150,7 @@
         </div>
         <div class="footer-content-right">
           <div class="footer-content-aside">
-           <div class="footer-slogan">Давайте дружить,это выгодно</div>
+           <div class="footer-slogan">Давайте дружить, это выгодно</div>
             <p>Скидка 10% для друзей из социальных сетей</p>
           </div>
         </div>
