--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </ul>
         </nav>
         <div class="user-block">
-          <a class="basket" href="#">Корзина</a>
+          <a class="basket icon-basket" href="#">Корзина</a>
         </div>
       </div>
     </header>
