--- a/index.html
+++ b/index.html
@@ -26,9 +26,42 @@
           <a class="basket icon-basket" href="#">Корзина</a>
         </div>
       </div>
+      <section class="slider">
+        <input type="radio" id="btn-1" name="toggle" checked>
+        <input type="radio" id="btn-2" name="toggle">
+        <input type="radio" id="btn-3" name="toggle">
+        <div class="slider-controls">
+          <label for="btn-1"></label>
+          <label for="btn-2"></label>
+          <label for="btn-3"></label>
+        </div>
+        <div class="slides">
+          <div class="slide">
+            <div class="slide-text">
+              <div class="slide-title">Долго, дорого,<br>скрупулезно</div>
+              <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
+              <a class="btn" href="#">Узнать больше</a>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="slide-text">
+              <div class="slide-title">Любите ли вы математику,<br> как любим ее мы?</div>
+              <p>Нашим дизайнерам мы удаляем нейроны, ответственные<br>за креатив, чтобы дать им возможность все просчитать.</p>
+              <a class="btn" href="#">Узнать больше</a>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="slide-text">
+              <div class="slide-title">Только наркотики,<br> только хардкор!</div>
+              <p>Все дизайнерские решения в нашей компании принимаются только под воздействием качественных галлюциногенов.</p>
+              <a class="btn" href="#">Узнать больше</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </header>
     <main >
-      <section class="slider">
+      <!--<section class="slider">
         <div class="slider-content clearfix container">
           <div class="slider-content-left">
             <div class="slider-slogan">
@@ -40,12 +73,13 @@
             <a class="more" href="#">Узнать больше</a>
           </div>
           <div class="slider-content-right">
-            <!--<div class="slider-logo">
+            <div class="slider-logo">
               <img class="slider-logo-img" src="img/index/slider-1.png" width="338" height="231" alt="">
-              </div>!-->
+              </div>
           </div>
         </div>
-      </section>
+      </section>!-->
+       
       <section class="features clearfix container">
         <div class="features-item">
           <div class="features-image">
