Добавление скрытого контента в каталоге 1из 5

--- a/catalog.html
+++ b/catalog.html
@@ -44,21 +44,28 @@
         </div>
         <article class="catalog-item">
           <div class="catalog-content">
+          <div class="catalog-content-desc">
+          <h4>Aviator</h4>
+          <p>Одностраничный макет<br>с авторским дизайном</p>
+          <a href="#" class="btn">8000 р</a>            
+          </div>
             <img src="img/catalog/items-1.jpg" width="240" height="240" alt="">
           </div>
+
         </article>
         <article class="catalog-item">
           <div class="catalog-content">
-            <img src="img/catalog/items-2.jpg" width="240" height="240" alt="">
+            <img class="catalog-content-img" src="img/catalog/items-2.jpg" width="240" height="240" alt="">
           </div>
         </article>
+
         <article class="catalog-item">
           <div class="catalog-content">
             <img src="img/catalog/items-3.jpg" width="240" height="240" alt="">
           </div>
         </article>
         <article class="catalog-item">
-          <div class="catalog-content">
+          <div class="catalog-content">          
             <img src="img/catalog/items-4.jpg" width="240" height="240" alt="">
           </div>
         </article>
