Добавление скрытой галереи 5 из 5 (необходима доработка)

--- a/catalog.html
+++ b/catalog.html
@@ -55,27 +55,54 @@
         </article>
         <article class="catalog-item">
           <div class="catalog-content">
+          <div class="catalog-content-desc">
+          <h4>Sunset</h4>
+          <p>Интернет-магазин<br>с личным кабинетом</p>
+          <a href="#" class="btn">10000 р</a>            
+          </div>
             <img class="catalog-content-img" src="img/catalog/items-2.jpg" width="240" height="240" alt="">
           </div>
         </article>
 
         <article class="catalog-item">
           <div class="catalog-content">
+          <div class="catalog-content-desc">
+          <h4>Forte</h4>
+          <p>Отличный макет <br>для личного блога</p>
+          <a href="#" class="btn">5000 р</a>            
+          </div>
             <img src="img/catalog/items-3.jpg" width="240" height="240" alt="">
           </div>
         </article>
+
         <article class="catalog-item">
-          <div class="catalog-content">          
+          <div class="catalog-content">
+          <div class="catalog-content-desc">
+          <h4>Modern organic<br> tai</h4>
+          <p>Сайт для ресторана<br>быстрого питания</p>
+          <a href="#" class="btn">12000 р</a>            
+          </div>        
             <img src="img/catalog/items-4.jpg" width="240" height="240" alt="">
           </div>
         </article>
         <article class="catalog-item">
           <div class="catalog-content">
+          <div class="catalog-content-desc">
+          <h4>Avenue</h4>
+          <p>Макет для блога<br>о путешествиях</p>
+          <a href="#" class="btn">8000 р</a>            
+          </div>
             <img src="img/catalog/items-5.jpg" width="240" height="240" alt="">
           </div>
         </article>
+
         <article class="catalog-item">
           <div class="catalog-content">
+          <div class="catalog-content-desc">
+          <h4>Dovetail</h4>
+          <p>Интернет магазин <br>с галереей товаров</p>
+          <a href="#" class="btn">8000 р</a>            
+          </div>
             <img src="img/catalog/items-6.jpg" width="240" height="240" alt="">
           </div>
         </article>
