--- a/index.html
+++ b/index.html
@@ -191,17 +191,69 @@
      <form class="user-form" action="form.php" method="get">
      <div class="modal-content-left-rows"
      <label for="user-name">Ваше имя:</label><br>
-     <input type="text" name="user-name" id="user-name" placeholder="Представтесь пожалуйста">
+     <input type="text" name="user-name" id="user-name" placeholder="Представтесь пожалуйста" >
      </div>
      <div class="modal-content-right-rows"
      <label for="user-mail">Ваш e-mail:</label><br>
-     <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа">     
+     <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа" >     
      </div>
      <label for="user-comment">Текст письма</label>
     <textarea name="user-comment" id="user-comment" cols="74" rows="10">В свободной форме       
      </textarea>
          <button class="btn" type="submit">Отправить</button>
      </form>      
-    </div>!
+    </div>
+   <script>
+      var link = document.querySelector(".contacts-adress-btn");
+
+      var popup = document.querySelector(".modal-content");
+      var close = popup.querySelector(".modal-content-close");
+
+      var form = popup.querySelector("form");
+      var login = popup.querySelector("[name=user-name]");
+      var password = popup.querySelector("[name=user-mail]");
+
+      var storage = localStorage.getItem("login");
+
+      link.addEventListener("click", function(event) {
+        event.preventDefault();
+        popup.classList.add("modal-content-show");
+
+        if (storage) {
+          login.value = storage;
+          password.focus();
+        } else {
+          login.focus();
+        }
+
+      });
+
+      close.addEventListener("click", function(event) {
+        event.preventDefault();
+        popup.classList.remove("modal-content-show");
+        popup.classList.remove("modal-error");
+      });
+
+      form.addEventListener("submit", function(event) {
+        if (!login.value || !password.value) {
+          event.preventDefault();
+          popup.classList.remove("modal-error");
+          popup.offsetWidth = popup.offsetWidth;
+          popup.classList.add("modal-error");
+        } else {
+          localStorage.setItem("login", login.value);
+        }
+      });
+
+      window.addEventListener("keydown", function(event) {
+        if (event.keyCode === 27) {
+          if (popup.classList.contains("modal-content-show")) {
+            popup.classList.remove("modal-content-show");
+            popup.classList.remove("modal-error");
+          }
+        }
+      });
+    </script>
+     
   </body>
 </html>
